--- a/css/menu.css
+++ b/css/menu.css
@@ -52,7 +52,7 @@
 	-moz-box-orient: vertical;
 	display: inline-block;
 	vertical-align: top;
-	word-wrap: break;
+	/*word-wrap: break;*/
 	height: 100%;
 	margin: 0 15px 0 0;
 	padding: 0 0 10px 0;
