--- a/style.css
+++ b/style.css
@@ -157,7 +157,6 @@ p#blogdesc {
 #search p {
   background: none repeat scroll 0 0 #ffffff;
   -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
   border-radius: 10px;
   box-shadow: 1px 1px 0 1px #636363 inset;
   padding: 0;
@@ -204,8 +203,6 @@ p#blogdesc {
 	text-decoration: none;
 }
 #search-suggest ul li:last-child a {
-	-moz-border-radius-bottomright: 4px;
-	-moz-border-radius-bottomleft: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	-webkit-border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
@@ -510,6 +507,8 @@ ul.tags li {
 	padding: 0;
 	line-height: 1.8em;
 }
+
+.shortArchives .arch-years {list-style-type : none !important;padding-left: 4px !important;}
 
 /* more infos */
 #more-infos {
