--- a/css/overview.css
+++ b/css/overview.css
@@ -1,14 +1,12 @@
-/*
-# ***** BEGIN LICENSE BLOCK *****
-#
-# Noviny2
-# Theme by Pierre Van Glabeke
-# Licensed under the GPL version 2.0 license.
-# See LICENSE file or
-# http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-#
-# ***** END LICENSE BLOCK *****
-*/
+/**
+ * @brief Noviny2, a theme for Dotclear 2
+ *
+ * @package Dotclear
+ * @subpackage Theme
+ *
+ * @author Pierre Van Glabeke
+ * @copyright https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
+ */
 #overview {
   display:block;
 	margin-left : 0;
