--- a/css/nomenu.css
+++ b/css/nomenu.css
@@ -1,12 +1,10 @@
-/*
-# ***** BEGIN LICENSE BLOCK *****
-#
-# Noviny2
-# Theme by Pierre Van Glabeke
-# Licensed under the GPL version 2.0 license.
-# See LICENSE file or
-# http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-#
-# ***** END LICENSE BLOCK *****
-*/
+/**
+ * @brief Noviny2, a theme for Dotclear 2
+ *
+ * @package Dotclear
+ * @subpackage Theme
+ *
+ * @author Pierre Van Glabeke
+ * @copyright https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
+ */
 #navsm, #nav {display:none;}
