--- a/print.css
+++ b/print.css
@@ -1,15 +1,12 @@
-/*
-# -- BEGIN LICENSE BLOCK ---------------------------------------
-#
-# This file is part of Dotclear 2.
-#
-# Copyright (c) 2003-2013 Olivier Meunier & Association Dotclear
-# Licensed under the GPL version 2.0 license.
-# See LICENSE file or
-# http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-#
-# -- END LICENSE BLOCK -----------------------------------------
-*/
+/**
+ * @brief Noviny2, a theme for Dotclear 2
+ *
+ * @package Dotclear
+ * @subpackage Theme
+ *
+ * @author Pierre Van Glabeke
+ * @copyright https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
+ */
 body {
 	font : 10pt serif;
 	margin: 0;
