--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-/*
-# ***** BEGIN LICENSE BLOCK *****
-#
-# Noviny2
-# Theme by Pierre Van Glabeke
-# Licensed under the GPL version 2.0 license.
-# See LICENSE file or
-# http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-#
-# ***** END LICENSE BLOCK *****
-*/
-/* Reset
--------------------------------------------------------- */
+/**
+ * @brief Noviny2, a theme for Dotclear 2
+ *
+ * @package Dotclear
+ * @subpackage Theme
+ *
+ * @author Pierre Van Glabeke
+ * @copyright https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
+ */
+/* Reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
